# lasers

./: .gitignore  Cargo.toml  default.nix  flake.nix
nix/devshell/: flake-module.nix
ui/: app-window.slint
